cicd/k3s-flannel-loxilb-gwapi/udpRoute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udproute-deployment
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: udproute-pod
  replicas: 2
  template:
    metadata:
      labels:
        app: udproute-pod
    spec:
      containers:
        - name: udproute-pod
          image: ghcr.io/loxilb-io/udp-echo:latest
          ports:
            - containerPort: 33333
