cicd/k3s-flannel-loxilb-gwapi/httpRoute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - name: http-pod
          image: ghcr.io/loxilb-io/nginx:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app: http
  ports:
    - protocol: TCP
      name: tcpport81
      port: 81
      targetPort: 8081
    - protocol: TCP
      name: tcpport80
      port: 80
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-http-route
  namespace: kube-system
spec:
  parentRefs:
    - name: test-gateway
      namespace: kube-system
      sectionName: http-listener
  hostnames:
     - "test.loxilb.gateway.http"
  rules:
    - backendRefs:
      - name: http-service
        namespace: default
        port: 80
